test/e2e/valid/print.mylang
{
define x of int16 = 42;
print(x);
}
