test/e2e/invalid/bufread_nonbuffer.mylang
{
    define mut x of int32 = 5;
    define mut y of int32 = x[0];
}
